PRCL cadcost import